crates/cribo/tests/snapshots/bundled_code@wildcard_metaclass_ordering.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wildcard_metaclass_ordering/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n):
        return object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = globals()[self._entry[1]]
        if module is not None:
            if getattr(module, '_cribo_machinery_loaded', False):
                saved = type(self)._pristine.get(id(module))
                fresh = _cribo.types.SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('yaml_module', '_cribo_init___cribo_952a76_yaml_module', 'yaml_module', True)
_cribo_finder.register('yaml_module.loader', None, None, False, {'BaseLoader': 'BaseLoader', 'Loader': 'Loader', 'FullLoader': 'FullLoader', 'UnsafeLoader': 'UnsafeLoader', 'SafeLoader': 'SafeLoader'})
_cribo_finder.register('yaml_module.dumper', None, None, False, {'BaseDumper': 'BaseDumper', 'Dumper': 'Dumper', 'SafeDumper': 'SafeDumper'})
yaml_module_loader = _cribo.types.SimpleNamespace(__name__='yaml_module.loader')
yaml_module = _cribo.types.SimpleNamespace(__name__='yaml_module', __initializing__=False, __initialized__=False, __path__=[])
yaml_module.loader = yaml_module_loader
__all__ = ["BaseLoader", "Loader", "FullLoader", "UnsafeLoader", "SafeLoader"]
class BaseLoader:
    """Base loader class"""

    def __init__(self):
        self.name = "BaseLoader"
BaseLoader.__module__ = 'yaml_module.loader'
class Loader(BaseLoader):
    """Standard YAML loader"""

    def __init__(self):
        super().__init__()
        self.name = "Loader"
Loader.__module__ = 'yaml_module.loader'
class FullLoader(BaseLoader):
    """Full featured YAML loader"""

    def __init__(self):
        super().__init__()
        self.name = "FullLoader"
FullLoader.__module__ = 'yaml_module.loader'
class UnsafeLoader(BaseLoader):
    """Unsafe loader that can execute arbitrary Python"""

    def __init__(self):
        super().__init__()
        self.name = "UnsafeLoader"
UnsafeLoader.__module__ = 'yaml_module.loader'
class SafeLoader(BaseLoader):
    """Safe loader with limited functionality"""

    def __init__(self):
        super().__init__()
        self.name = "SafeLoader"
SafeLoader.__module__ = 'yaml_module.loader'
yaml_module_loader.BaseLoader = BaseLoader
yaml_module_loader.Loader = Loader
yaml_module_loader.FullLoader = FullLoader
yaml_module_loader.UnsafeLoader = UnsafeLoader
yaml_module_loader.SafeLoader = SafeLoader
yaml_module_dumper = _cribo.types.SimpleNamespace(__name__='yaml_module.dumper')
yaml_module.dumper = yaml_module_dumper
__all___yaml_module_dumper = ["BaseDumper", "Dumper", "SafeDumper"]
class BaseDumper:
    """Base dumper class"""

    def __init__(self):
        self.name = "BaseDumper"
BaseDumper.__module__ = 'yaml_module.dumper'
class Dumper(BaseDumper):
    """Standard YAML dumper"""

    def __init__(self):
        super().__init__()
        self.name = "Dumper"
Dumper.__module__ = 'yaml_module.dumper'
class SafeDumper(BaseDumper):
    """Safe YAML dumper"""

    def __init__(self):
        super().__init__()
        self.name = "SafeDumper"
SafeDumper.__module__ = 'yaml_module.dumper'
yaml_module_dumper.BaseDumper = BaseDumper
yaml_module_dumper.Dumper = Dumper
yaml_module_dumper.SafeDumper = SafeDumper
def _cribo_init___cribo_952a76_yaml_module(_cribo_self):
    if getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = 'yaml_module'
    _cribo_self.__doc__ = None
    BaseLoader = yaml_module_loader.BaseLoader
    Loader = yaml_module_loader.Loader
    FullLoader = yaml_module_loader.FullLoader
    UnsafeLoader = yaml_module_loader.UnsafeLoader
    BaseDumper = yaml_module_dumper.BaseDumper
    Dumper = yaml_module_dumper.Dumper

    class YAMLObjectMetaclass(type):
        """The metaclass for YAMLObject."""

        def __init__(cls, name, bases, kwds):
            super().__init__(name, bases, kwds)
            if "yaml_tag" in kwds and kwds.get("yaml_tag") is not None:
                print(f"Metaclass: Registering {name} with tag {kwds['yaml_tag']}")
                if hasattr(cls, "yaml_loader"):
                    if isinstance(cls.yaml_loader, list):
                        for loader in cls.yaml_loader:
                            print(f"  - Would register with {loader.__name__}")
                    else:
                        print(f"  - Would register with {cls.yaml_loader.__name__}")
    YAMLObjectMetaclass.__module__ = 'yaml_module'
    YAMLObjectMetaclass.__qualname__ = 'YAMLObjectMetaclass'
    _cribo_self.YAMLObjectMetaclass = YAMLObjectMetaclass

    class YAMLObject(metaclass=YAMLObjectMetaclass):
        """\n    An object that can be serialized to/from YAML.\n    Uses wildcard-imported symbols in class body.\n    """
        __slots__ = ()
        yaml_loader = [Loader, FullLoader, UnsafeLoader]
        yaml_dumper = Dumper
        yaml_tag = None
        yaml_flow_style = None

        def __repr__(self):
            return f"YAMLObject(loaders={len(self.yaml_loader)}, dumper={self.yaml_dumper.__name__})"

        @classmethod
        def from_yaml(cls, loader, node):
            return f"Loading {cls.__name__} from YAML"

        @classmethod
        def to_yaml(cls, dumper, data):
            return f"Dumping {cls.__name__} to YAML"
    YAMLObject.__module__ = 'yaml_module'
    YAMLObject.__qualname__ = 'YAMLObject'
    _cribo_self.YAMLObject = YAMLObject
    _cribo_self.dumper = yaml_module_dumper
    _cribo_self.loader = yaml_module_loader
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
yaml_module.__init__ = _cribo_init___cribo_952a76_yaml_module
"""\nTest fixture for wildcard imports with metaclass ordering.\n\nThis tests that when using wildcard imports, symbols from __all__\nare properly included even if not directly used in the class body.\n"""
__cribo_init_result = _cribo_init___cribo_952a76_yaml_module(yaml_module)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(yaml_module, attr, getattr(__cribo_init_result, attr))
assert hasattr(yaml_module, "YAMLObject")
assert hasattr(yaml_module, "YAMLObjectMetaclass")
print("Testing YAMLObject...")
obj = yaml_module.YAMLObject()
print(f"YAMLObject created: {obj}")
print(f"YAMLObject has metaclass: {type(yaml_module.YAMLObject).__name__}")
class CustomYAML(yaml_module.YAMLObject):
    yaml_tag = "!custom"
print("CustomYAML class created successfully")
print("All tests passed!")
dumper = yaml_module.dumper
loader = yaml_module.loader
